AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-decisions-definitions/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-decisions
spec:
  host: sas-decisions
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /decisions/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-treatment-definitions
spec:
  host: sas-treatment-definitions
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /treatmentDefinitions/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions-definitions
    sas.com/admin: namespace
  name: sas-decisions
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /decisions
    - uri:
        prefix: /decisions/
    route:
    - destination:
        host: sas-decisions
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-decisions-definitions
    sas.com/admin: namespace
  name: sas-treatment-definitions
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /treatmentDefinitions
    - uri:
        prefix: /treatmentDefinitions/
    route:
    - destination:
        host: sas-treatment-definitions
    timeout: 300s
